add_subdirectory(asan-options)
add_subdirectory(direct-leak)
add_subdirectory(indirect-leak)
add_subdirectory(double-free)
add_subdirectory(alloc-dealloc-mismatch)
add_subdirectory(heap-use-after-free)
add_subdirectory(heap-buffer-overflow)
add_subdirectory(heap-buffer-underflow)
add_subdirectory(stack-use-after-scope)
add_subdirectory(stack-use-after-return)
add_subdirectory(stack-buffer-overflow)
add_subdirectory(stack-buffer-underflow)
add_subdirectory(vector-overflow)
